fixed css scrollbar bug

--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -120,7 +120,6 @@ code {
   height: 100%;
   margin-bottom: 105px;
   margin-top: 40px;
-  overflow-y: scroll;
   padding: 10px;
 
   a {
@@ -214,7 +213,6 @@ code {
   background: #2e0a2e;
   bottom: 47px;
   height: 17px;
-  overflow: scroll;
 }
 
 #avatar {
